# jgs

./: .gitignore  manage.py  pyproject.toml  render.yaml
jgs/: asgi.py  settings.py  urls.py  wsgi.py
jgs/_settings/: base.py  dev.py
mysite/: settings.py  urls.py
mysite/_settings/: dev.py
render/: admin.py  forms.py  models.py  storage.py  urls.py  views.py
render/fixtures/: firegrass_art_records_PROD.json  firegrass_records_complete.json  latest.dump.1
render/migrations/: 0001_initial.py  0002_alter_art_available_alter_art_certificate_and_more.py  0003_auto_20220606_1337.py  0004_auto_20220606_1354.py
render/templates/: base.html
render/templates/render/: art-detail.html  art-form.html  art-list.html  art_detail.html  art_form.html  art_list.html
