[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["John-Anthony Thevos <john.thevos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
gunicorn = "^20.0.4"
django-extensions = "^3.1.5"
botocore = "1.17.62"
boto3 = "1.14.62"
decouple = "^0.0.7"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
